Refacrot connect chat handler
